assets/main.css
*, body, h1, h2, h3, h4, h5, h6, .h1, .h2, .h3, .h4, .h5, .h6 {
  font-family: "Ubuntu", "Helvetica Neue", "Helvetica", "Arial", "Heiti SC", "WenQuanYi Micro Hei", "Microsoft YaHei", sans-serif;
}
body {
  margin-top: 15px;
  font-size: 13px;
}
.form-group {
  margin-bottom: 0px;
}
.vertical-center {
  display: flex;
  align-items: center;
}
.divider {
  padding-left: 15px;
  padding-right: 15px;
}

.divider h5{
  font-size: 120%;
}

.divider hr {
  margin-bottom: 15.5px;
}

::-webkit-scrollbar {
  width: 10px;
}
::-webkit-scrollbar-track {
  -webkit-border-radius: 1px;
}
::-webkit-scrollbar-thumb {
  -webkit-border-radius: 1px;
  background-color: #3d3d3d;
}
#main-table tbody td {
 vertical-align: middle;
 line-height: 36px;
 height: 36px;
 padding: 1px 5px;
}
.item-table-name {
  padding-left: 10px;
}
.center {
  text-align: center;
}
.checkbox {
  position: absolute;
  margin: 0px 10px;
}
.new-checkbox {
  position: absolute;
  margin: 0px -15px;
}
.checkbox > input {
  top: 0px !important;
  bottom: 0px !important;
}
img.svg {
  width: 26px;
  height: 23px;
  margin: 5px 3px 4px 3px;
}

.cell-left{
  text-align: left;
}

.cell-right span{
  display: block;
  min-width: 6em;
  float: left;
}

.cell-right i{
  font-style: normal;
}

.cell-header{
  text-align: center;
  font-size: 110%;
  border-top: 1px solid;
}

.cell-center{
  text-align: center;
}

.cell-center span{
  min-width: 4em;
  display: inline-block;
}

.expandable:hover {
  cursor: pointer;
}

